# algorithms-and-data-structure-projects

./: CMakeLists.txt  README.md  dane.txt  main.cpp
projekt1/: main.cpp
projekt2/: main.cpp
projekt2/resource/: dane.txt
projekt3/: main.cpp
projekt3/resource/: dane.csv  duzy-zbior_danych_100000.csv
struktury/drzewo/: main.cpp
struktury/lista-dwukierunkowa/: main.cpp
struktury/lista-jednokierunkowa/: main.cpp
struktury/stos/: main.cpp
