cmake_minimum_required(VERSION 3.13)
project(projekt2)

set(CMAKE_CXX_STANDARD 11)

add_executable(lista-dwukierunkowa lista-dwukierunkowa/main.cpp)
add_executable(lista-jednokierunkowa lista-jednokierunkowa/main.cpp)
add_executable(projekt1 projekt1/main.cpp)
add_executable(projekt2 projekt2/main.cpp)
add_executable(projekt3 projekt3/main.cpp)